# dndmcp

./: .env.example  .gitignore  .mcp.json  BUILD.md  CLAUDE.md  Dockerfile  HANDOFF.md  JUDGING.md  KNOWLEDGE.md  LICENSE  MCP_SURFACE.md  PRIMITIVES.md  README.md  REQUIREMENTS.md  STRATEGY.md  WORLD_SCHEMA.md  pyproject.toml
.beads/: metadata.json
dndmcp/: CLAUDE.md  EVENT_STREAM_SPEC.md  GENERATION_FEATURES.md  LEARNINGS.md  MULTIWORLD_DESIGN.md  SCHEMA.md  SETUP.md  admin_flags.py  app.py  art.py  bot_player.py  chat_sessions.py  claude_desktop_config.snippet.json  compendium.py  dm_loop.py  evals.py  flash_art.py  flash_llm.py  game.py  inference.py  linear_gen.py  linear_world.py  models.py  pairing.py  requirements.txt  server.py  setting.py  state.py  web.py  worldgen.py
flagship/: evolver.py  lora_sweep.py  workflows.py
forge/: __init__.py  availability.py  cost.py  diagnostics.py  env.py  minting.py  registry.py  run.py  selftest.py  server.py  teardown.py
ideas/: cross-silicon-oracle.md  dndmcp.md  gpu-tools-for-agents.md  models-reference.md
notes/: deployment.md  prep-kit.md
research/: 00-known-issues-and-positioning.md  01-python-sdk.md  02-ts-sdk.md  03-prior-prep-gpu-toolbelt.md  04-ecosystem-skills-docs-mcp.md  05-image-and-deploy-playbook.md  06-landscape-2026.md  README.md
scripts/: burst_timeline.py  burst_warm.py  cross_silicon.py  delete_world.sh  deploy_own_pod.sh  deploy_vllm.py  deploy_vllm_bare.py  deploy_vllm_class.py  destroy_own_pod.sh  dev_worktree.sh  diag_llm.py  dm_workers.sh  eval_room_prompts.py  graph_context_ablation.py  hello_world.py  install_claude_code.sh  player_activity.sh  pod_bot_status.sh  pod_get_flags.sh  pod_logs.sh  pod_set_flag.sh  pod_ssh.sh  pod_status.sh  redeploy_pod.sh  (+8 more)
(+29 files in other folders)
