[project]
name = "forge"
version = "0.1.0"
description = "FORGE — GPU-on-tap for agents. An agent-native control layer over Runpod Flash."
requires-python = ">=3.10,<3.14"
dependencies = [
    "runpod-flash>=1.7.0",
    "mcp>=1.2.0",          # FastMCP stdio server (the agent interface)
]

[project.optional-dependencies]
# Heavy deps only needed when running the LoRA flagship locally; the GPU work itself
# installs its own deps remotely via Flash `dependencies=[...]`.
dev = ["pytest>=8.0.0"]

[project.scripts]
forge = "forge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge"]
